<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_sim</name>
  <version>0.0.0</version>
  <description>ROS2 simulation package</description>
  <maintainer email="q11@todo.todo">q11</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 构建和运行时都需要的依赖 -->
  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- 仅运行时需要的依赖 -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
